fix to adjust background image on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -189,13 +189,22 @@ header {
   display: flex;
   flex-direction: column;
   margin-bottom: 15vh;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+}
+@media (max-width: 500px) {
+  header {
+    background: url("../img/woman-weightlifting-min.jpg");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 }
 header .topnav {
   display: flex;
@@ -257,7 +266,7 @@ header .head_pitch .head_cta {
   line-height: 50px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-@media screen and (max-width: 500px) {
+@media (max-width: 500px) {
   header {
     line-height: 38px;
     font-size: 1rem;
